# well-bot

./: .gitignore
player/: CMakeLists.txt  main.c
player/include/: CMakeLists.txt  player.c  player.h
